@@ -13,6 +13,7 @@
 #include "IrrlichtDevice.h"
 #include "IImagePresenter.h"
 #include "ICursorControl.h"
+#include "os.h"
 
 #ifdef _IRR_COMPILE_WITH_X11_
 
@@ -293,6 +294,12 @@ namespace irr
 			virtual core::dimension2di getSupportedIconSize() const;
 
 #ifdef _IRR_COMPILE_WITH_X11_
+			//! Set platform specific behavior flags.
+			virtual void setPlatformBehavior(gui::ECURSOR_PLATFORM_BEHAVIOR behavior) {PlatformBehavior = behavior; }
+
+			//! Return platform specific behavior.
+			virtual gui::ECURSOR_PLATFORM_BEHAVIOR getPlatformBehavior() const { return PlatformBehavior; }
+
 			void update();
 			void clearCursors();
 #endif
@@ -303,6 +310,14 @@ namespace irr
 #ifdef _IRR_COMPILE_WITH_X11_
 				if (Null)
 					return;
+
+				if ( PlatformBehavior&gui::ECPB_X11_CACHE_UPDATES && !os::Timer::isStopped() )
+				{
+					u32 now = os::Timer::getTime();
+					if (now <= lastQuery)
+						return;
+					lastQuery = now;
+				}
 
 				Window tmp;
 				int itmp1, itmp2;
@@ -327,6 +342,8 @@ namespace irr
 			core::position2d<s32> CursorPos;
 			core::rect<s32> ReferenceRect;
 #ifdef _IRR_COMPILE_WITH_X11_
+			gui::ECURSOR_PLATFORM_BEHAVIOR PlatformBehavior;
+			u32 lastQuery;
 			Cursor invisCursor;
 
 			struct CursorFrameX11
